[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/gui/menus/settlement_screen/settlement_dialogue.gd" type="Script" id=1]

[sub_resource type="StreamTexture" id=2]
load_path = "res://.import/character_portrait.jpg-c4dcec21711129c383a2b7a9323b636f.stex"

[node name="SettlementDialogueScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
text_file_ref = "res://src/gui/dialogue_repo.json"

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 57.0
margin_top = 83.0
margin_right = -49.0
margin_bottom = -20.0
color = Color( 0.282353, 0.266667, 0.219608, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 27.0
margin_top = 25.0
margin_right = -28.0
margin_bottom = -30.0

[node name="NpcContainer" type="VBoxContainer" parent="ColorRect/HBoxContainer"]
margin_right = 317.0
margin_bottom = 442.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.68

[node name="NpcPortraitContainer" type="PanelContainer" parent="ColorRect/HBoxContainer/NpcContainer"]
margin_right = 317.0
margin_bottom = 313.0
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="NpcPortrait" type="TextureRect" parent="ColorRect/HBoxContainer/NpcContainer/NpcPortraitContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 310.0
margin_bottom = 306.0
texture = SubResource( 2 )
expand = true

[node name="Padding1" type="Control" parent="ColorRect/HBoxContainer/NpcContainer"]
margin_top = 317.0
margin_right = 317.0
margin_bottom = 333.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.15

[node name="NpcTextContainer" type="PanelContainer" parent="ColorRect/HBoxContainer/NpcContainer"]
margin_top = 337.0
margin_right = 317.0
margin_bottom = 442.0
size_flags_vertical = 3

[node name="NpcName" type="Label" parent="ColorRect/HBoxContainer/NpcContainer/NpcTextContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 310.0
margin_bottom = 98.0
size_flags_vertical = 1
text = "NameHolder:"
autowrap = true

[node name="NpcDialogue" type="Label" parent="ColorRect/HBoxContainer/NpcContainer/NpcTextContainer"]
margin_left = 7.0
margin_top = 45.0
margin_right = 310.0
margin_bottom = 59.0
text = "Text Holder"

[node name="Padding2" type="Control" parent="ColorRect/HBoxContainer"]
margin_left = 321.0
margin_right = 391.0
margin_bottom = 442.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.15

[node name="PlayerDialogueContainer" type="PanelContainer" parent="ColorRect/HBoxContainer"]
margin_left = 395.0
margin_right = 863.0
margin_bottom = 442.0
size_flags_horizontal = 3

[node name="PlayerDialogueVBox" type="VBoxContainer" parent="ColorRect/HBoxContainer/PlayerDialogueContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 461.0
margin_bottom = 435.0

[node name="Choice1" type="Label" parent="ColorRect/HBoxContainer/PlayerDialogueContainer/PlayerDialogueVBox"]
margin_right = 454.0
margin_bottom = 14.0
mouse_filter = 0
text = "Holder1"

[node name="Choice2" type="Label" parent="ColorRect/HBoxContainer/PlayerDialogueContainer/PlayerDialogueVBox"]
margin_top = 18.0
margin_right = 454.0
margin_bottom = 32.0
mouse_filter = 0
text = "Holder1"

[node name="Choice3" type="Label" parent="ColorRect/HBoxContainer/PlayerDialogueContainer/PlayerDialogueVBox"]
margin_top = 36.0
margin_right = 454.0
margin_bottom = 50.0
mouse_filter = 0
text = "Holder1"

[node name="Choice4" type="Label" parent="ColorRect/HBoxContainer/PlayerDialogueContainer/PlayerDialogueVBox"]
margin_top = 54.0
margin_right = 454.0
margin_bottom = 68.0
mouse_filter = 0
text = "Holder1"

[node name="GoodbyeChoice" type="Label" parent="ColorRect/HBoxContainer/PlayerDialogueContainer/PlayerDialogueVBox"]
margin_top = 72.0
margin_right = 454.0
margin_bottom = 86.0
mouse_filter = 0
text = "(goodbye)"

[node name="Padding" type="Control" parent="ColorRect/HBoxContainer/PlayerDialogueContainer/PlayerDialogueVBox"]
margin_top = 90.0
margin_right = 454.0
margin_bottom = 428.0
size_flags_vertical = 3
size_flags_stretch_ratio = 8.5

[connection signal="gui_input" from="ColorRect/HBoxContainer/PlayerDialogueContainer/PlayerDialogueVBox/Choice1" to="." method="_on_Choice1_gui_input"]
[connection signal="gui_input" from="ColorRect/HBoxContainer/PlayerDialogueContainer/PlayerDialogueVBox/Choice2" to="." method="_on_Choice2_gui_input"]
[connection signal="gui_input" from="ColorRect/HBoxContainer/PlayerDialogueContainer/PlayerDialogueVBox/Choice3" to="." method="_on_Choice3_gui_input"]
[connection signal="gui_input" from="ColorRect/HBoxContainer/PlayerDialogueContainer/PlayerDialogueVBox/Choice4" to="." method="_on_Choice4_gui_input"]
[connection signal="gui_input" from="ColorRect/HBoxContainer/PlayerDialogueContainer/PlayerDialogueVBox/GoodbyeChoice" to="." method="_on_GoodbyeChoice_gui_input"]
